[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "recordstore"
version = "0.1.0"
description = "Versioned key-record store over a content-addressed chunk store (memory or Ethereum Swarm/Bee backends)"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
bee = ["requests"]

[tool.setuptools.packages.find]
where = ["src"]
