[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "recordstore"
version = "0.8.0"
description = "Versioned key-record store over a content-addressed bytes store (memory or Ethereum Swarm/Bee backends)"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }

[project.optional-dependencies]
bee = ["requests"]
feeds = ["swarm-bee"]

[tool.setuptools.packages.find]
where = ["src"]
